<resources>
    <string name="app_name">Test for Scenario</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="Projects">Projects</string>
    <string name="hint_project_name">Project Name</string>
    <string name="btn_save">Save</string>
    <string name="msg_mandatory">Mandatory field.</string>
    <string name="Ambient">Ambient</string>
    <string name="label_project_state">Project</string>
    <string name="loading">Download Image ....</string>
    <string name="error_image">Image Does Not exist or Network Error.</string>
    <string name="Module">Module</string>
    <string name="LightFixture">Light Fixture</string>
    <string name="nav_exit">Exit</string>
    <string name="label_module_state">Module</string>
    <string name="title_activity_module_ambient">ModuleAmbientActivity</string>
    <string name="hint_module_name">Module Name</string>
    <string name="label_ambient_state">Ambient</string>
    <string name="ambient_name">Ambient Name</string>
    <string name="name_light">Light Fixture Name</string>
</resources>
